# CTF-2025-public

./: .gitmodules  README.md
challenges/blazingly-fast/: .gitignore  Dockerfile.build  Dockerfile.test  FLAG  challenge.json
challenges/blazingly-fast/challenge/: .dockerignore  Dockerfile
challenges/blazingly-fast/client/: README.md  client.py
challenges/blazingly-fast/solve/: README.md  solve.py
challenges/blazingly-fast/text/: CHAL-EN.md  CHAL-FR.md  HINT1-EN.md  HINT1-FR.md  HINT2-EN.md  HINT2-FR.md
challenges/crypto-bro/: Dockerfile.test  FLAG  challenge.json
challenges/crypto-bro/challenge/: Dockerfile  main.py
challenges/crypto-bro/solve/: README.md  solve.py
challenges/crypto-bro/text/: challengeEN.md  defiFR.md  hint.md
challenges/fast-data/: .gitignore  CONFIG  FLAG  challenge.json
challenges/fast-data/solve/: README.md
challenges/fast-data/text/: HintEN.md  HintFR.md  challengeEN.md  defiFR.md
challenges/ift-3000/: Dockerfile.build  Dockerfile.test  FLAG  challenge.json
challenges/is-today-friday-the-13/: Dockerfile  FLAG  challenge.json
challenges/lego-island/: Dockerfile.build  Dockerfile.test  FLAG  challenge.json
challenges/lego-island/challenge/: CMakeLists.txt  build.cpp
challenges/mix-and-match/: Dockerfile.build  FLAG  challenge.json
challenges/pc-from-scratch/: .gitignore  Dockerfile.build  Dockerfile.test  FLAG  challenge.json
challenges/printer-jam/: .gitignore  Dockerfile.build  Dockerfile.test  FLAG  challenge.json
challenges/the-price-is-random/: Dockerfile.test  FLAG  challenge.json
(+148 files in other folders)
